--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,7 @@
     "recharts": "^2.8.0",
     "resolve-url-loader": "^5.0.0",
     "svgo": "^4.0.0",
-    "typescript": "^4.9.5",
-    "webpack-dev-server": "^5.2.2"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,7 +54,7 @@
   "overrides": {
     "nth-check": "^2.1.1",
     "postcss": "^8.5.6",
-    "webpack-dev-server": "^5.2.2",
+    "webpack-dev-server": "^4.15.1",
     "svgo": "^4.0.0",
     "css-select": "^5.1.0"
   }
